Added new Biased MNIST with ResNet10 model

--- a/conf/biased_mnist_generator/full_v1.yaml
+++ b/conf/biased_mnist_generator/full_v1.yaml
@@ -1,6 +1,6 @@
 biased_mnist_dir: /hdd/robik/biased_mnist
 mnist_dir: /hdd/robik/MNIST
-bias_split_name: full
+bias_split_name: full_v1
 textures_dir: null
 
 bias_config:
